// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text area EC Disabled renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    disabled=""
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Invalid renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    
      This is the error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Optional renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Optional renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Optional renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m custom-class custom-class--test"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Optional renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Optional renders correctly with extra label class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label custom-label-class custom-label-class--test"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EC Required renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    required=""
    rows="4"
  />
</div>
`;

exports[`Text area EU Disabled renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label ecl-form-label--disabled"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block ecl-help-block--disabled"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    disabled=""
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Invalid renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label ecl-form-label--invalid"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <div
    class="ecl-feedback-message"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--s ecl-feedback-message__icon"
      focusable="false"
    >
      <use
        xlink:href="/icons.svg#notifications--warning"
      />
    </svg>
          This is the error message
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--invalid ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Optional renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Optional renders correctly with extra attributes 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Optional renders correctly with extra class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m custom-class custom-class--test"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Optional renders correctly with extra group class names 1`] = `
<div
  class="ecl-form-group custom-group-class custom-group-class--test"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Optional renders correctly with extra label class names 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label custom-label-class custom-label-class--test"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__optional"
    >
       (optional)
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    rows="4"
  />
</div>
`;

exports[`Text area EU Required renders correctly 1`] = `
<div
  class="ecl-form-group"
>
  <label
    class="ecl-form-label"
    for="example-textarea-id-1"
  >
    Label
    <span
      class="ecl-form-label__required"
    >
      *
    </span>
  </label>
  <div
    class="ecl-help-block"
  >
    This is the input's helper text.
  </div>
  <textarea
    class="ecl-text-area ecl-text-area--m"
    id="example-textarea-id-1"
    placeholder="Placeholder text"
    required=""
    rows="4"
  />
</div>
`;
